--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ more-itertools = "^10.1.0"
 pyyaml = "^6.0.1"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
