--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -33,13 +33,13 @@ jobs:
         with:
           poetry-version: "1.7.0"
 
-      - name: Store current Version
-        id: current-version
-        run: |
-          echo "$(poetry version)"
-          echo poetry version
-          echo "CURRENT_VERSION=$(poetry version --short)" >> $GITHUB_OUTPUT
-
       - name: Bump package Version using Poetry
-        run: echo "${{ steps.current-version.outputs.CURRENT_VERSION }}"
-        # run: poetry version ${{ github.event.inputs.rule }}
+        id: bumping
+        env:
+          RULE: ${{ github.event.inputs.rule }}
+        run: echo "MSG=$(poetry version --dry-run $RULE)" >> $GITHUB_OUTPUT
+
+      - name: Output debug msg
+        env:
+          BMPMSG: ${{ steps.bumping.outputs.MSG }}
+        run: echo "$BMPMSG"
