--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -19,6 +19,9 @@ jobs:
   bump:
     name: Bump version number
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -37,9 +40,19 @@ jobs:
         id: bumping
         env:
           RULE: ${{ github.event.inputs.rule }}
-        run: echo "MSG=$(poetry version --dry-run $RULE)" >> $GITHUB_OUTPUT
+        run: echo "BUMP_MSG=$(poetry version $RULE)" >> $GITHUB_OUTPUT
 
       - name: Output debug msg
         env:
-          BMPMSG: ${{ steps.bumping.outputs.MSG }}
-        run: echo "$BMPMSG"
+          BUMP_MSG: ${{ steps.bumping.outputs.BUMP_MSG }}
+        run: echo "$BUMP_MSG"
+
+      - name: Commit changes
+        # could also use https://github.com/stefanzweifel/git-auto-commit-action instead
+        env:
+          BUMP_MSG: ${{ steps.bumping.outputs.BUMP_MSG }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git commit -am "$BUMP_MSG"
+          git push
