--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -5,6 +5,7 @@ on:
       dry-run:
         type: boolean
         description: Only output new version number, no actual change.
+        required: false
       rule:
         type: choice
         description: Version bump level
@@ -19,12 +20,29 @@ on:
         - prerelease
         - "prerelease --next-phase"
 
+  workflow_call:
+    inputs:
+      dry-run:
+        type: boolean
+        description: Only output new version number, no actual change.
+        required: false
+      rule:
+        type: string
+        description: Version bump level
+        required: true
+    outputs:
+      bumpmsg:
+        description: Message created by the version bump.
+        value: ${{ jobs.bump.outputs.bumpmsg }}
+
 jobs:
   bump:
     name: Bump version number
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      bumpmsg: ${{ steps.bumping.outputs.BUMP_MSG }}
 
     steps:
       - name: Checkout code
