--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -69,7 +69,9 @@ jobs:
         if: github.event.inputs.dry-run == 'true'
         env:
           BUMP_MSG: ${{ steps.bumping.outputs.BUMP_MSG }}
-        run: echo "$BUMP_MSG"
+        run: |
+          echo "## $BUMP_MSG" >> $GITHUB_STEP_SUMMARY
+          echo "Dry run only, no actual modification made." >> $GITHUB_STEP_SUMMARY
 
       - name: Commit changes
         # could also use https://github.com/stefanzweifel/git-auto-commit-action instead
@@ -81,3 +83,5 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git commit -am "$BUMP_MSG"
           git push
+          echo "## $BUMP_MSG" >> $GITHUB_STEP_SUMMARY
+          echo "Successfully committed and pushed version bump." >> $GITHUB_STEP_SUMMARY
