Remove github.event from input parameters
This was copied in from an example using manual dispatch only. In that
case, the only difference is appearently that it converts bools to strings.
But for the workflow to also function when called with parameters,
the github.event must not be there. Which then also means bools are bools.

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -61,12 +61,12 @@ jobs:
       - name: Bump package Version using Poetry
         id: bumping
         env:
-          RULE: ${{ github.event.inputs.rule }}
-          DRY: ${{ github.event.inputs.dry-run == 'true' && '--dry-run' || '' }}
+          RULE: ${{ inputs.rule }}
+          DRY: ${{ inputs.dry-run && '--dry-run' || '' }}
         run: echo "BUMP_MSG=$(poetry version $DRY $RULE)" >> $GITHUB_OUTPUT
 
       - name: Output debug msg
-        if: github.event.inputs.dry-run == 'true'
+        if: inputs.dry-run
         env:
           BUMP_MSG: ${{ steps.bumping.outputs.BUMP_MSG }}
         run: |
@@ -75,7 +75,7 @@ jobs:
 
       - name: Commit changes
         # could also use https://github.com/stefanzweifel/git-auto-commit-action instead
-        if: github.event.inputs.dry-run == 'false'
+        if: ${{ ! inputs.dry-run }}
         env:
           BUMP_MSG: ${{ steps.bumping.outputs.BUMP_MSG }}
         run: |
