--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,21 @@
 [tool.poetry]
 name = "astar-utils"
 version = "0.1.2a0"
-description = ""
+description = "Contains commonly-used utilities for AstarVienna's projects."
+license = "GPL-3.0-or-later"
 authors = ["Fabian Haberhauer <fabian.haberhauer@univie.ac.at>"]
+maintainers = [
+    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
+    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
+]
 readme = "README.md"
+repository = "https://github.com/AstarVienna/astar-utils"
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Utilities"
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
