--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyyaml = "^6.0.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
