Use improved publish workflow

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -22,19 +22,29 @@ jobs:
         with:
           poetry-version: "1.7.1"
 
+      - name: Build package
+        run: poetry build
+
       - name: Store distribution files
         uses: actions/upload-artifact@v3
         with:
           name: distribution
-          path: dist
+          path: dist/
+
+      - name: Upload release attachment
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: dist/*
 
   publish:
     name: Publish package to PyPI
     runs-on: ubuntu-latest
     needs: build
+    if: needs.build.result == 'success'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -50,8 +60,19 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: distribution
+          path: dist/
 
       - name: Publish to PyPI
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
         run: poetry publish
+
+  bump:
+    name: Bump to (next) dev version
+    needs: publish
+    if: ${{ needs.publish.result == 'success' }}
+    uses: ./.github/workflows/bump.yml
+    secrets: inherit
+    with:
+      rule: prerelease
+      branch: main
