--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 python = "^3.9"
 more-itertools = "^10.1.0"
 pyyaml = "^6.0.1"
+colorama = "^0.4.6"
 
 
 [tool.poetry.group.test.dependencies]
