--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,10 +14,12 @@ on:
 jobs:
   call-tests:
     name: Offline tests
-    uses: AstarVienna/DevOps/.github/workflows/tests.yml@poetry
+    uses: AstarVienna/DevOps/.github/workflows/tests.yml@main
+    with:
+      poetry: True
     secrets: inherit
 
   call-updated-tests:
     name: Tests with updated dependencies
-    uses: AstarVienna/DevOps/.github/workflows/updated_tests.yml@poetry
+    uses: AstarVienna/DevOps/.github/workflows/updated_tests.yml@main
     secrets: inherit
