--- a/.github/workflows/replaceholder.yml
+++ b/.github/workflows/replaceholder.yml
@@ -72,7 +72,6 @@ jobs:
         run: |
           if [[ $CUR_VER =~ "rc" ]]; then
             echo "STABLE=$(poetry version -s --dry-run prerelease --next-phase)" >> $GITHUB_OUTPUT
-            echo "On rc version of $STABLE" >> $GITHUB_STEP_SUMMARY
           else
             echo "::error:: $CUR_VER is not a rc version"
           fi
@@ -81,12 +80,20 @@ jobs:
         env:
           STABLE: ${{ steps.chkrc.outputs.STABLE }}
           PLCHLDR: "PLACEHOLDER_NEXT_RELEASE_VERSION"
-          PATH: ${{ inputs.pkg-path }}
+          PKGPATH: ${{ inputs.pkg-path }}
           PATTERN: ${{ inputs.file-pattern }}
-        run: find "$PATH" -type f -name "$PATTERN" -exec sed -i "s/$PLCHLDR/v$STABLE/g" {} +
+        shell: bash
+        run: |
+          echo "On rc version of $STABLE" >> $GITHUB_STEP_SUMMARY
+          echo "Replacing $PLCHLDR in $PATTERN files inside $PKGPATH" >> $GITHUB_STEP_SUMMARY
+          echo "$(find $PKGPATH -type f -name '*.py' -exec sed -i 's/PLACEHOLDER_NEXT_RELEASE_VERSION/vx.y/g' {} +)" >> $GITHUB_STEP_SUMMARY
+
+      - name: Check for changes
+        id: chkdiff
+        run: echo "CHANGES=$(git diff --exit-code --quiet)" >> $GITHUB_OUTPUT
 
       - name: Commit changes
-        if: ${{ git diff --exit-code --quiet }}
+        if: ${{ steps.chkdiff.outputs.CHANGES }}
         env:
           STABLE: ${{ steps.chkrc.outputs.STABLE }}
         run: |
