Run replaceholder with python
* Fix if-condition.

* Add msg for no-op case.

--- a/.github/workflows/replaceholder.yml
+++ b/.github/workflows/replaceholder.yml
@@ -43,7 +43,7 @@ jobs:
       contents: write
     outputs:
       curver: ${{ steps.bobr.outputs.CUR_VER }}
-      stable: ${{ steps.chkrc.outputs.STABLE }}
+      stable: ${{ steps.bobr.outputs.STABLE }}
 
     steps:
       - name: Checkout code
@@ -61,32 +61,59 @@ jobs:
         with:
           poetry-version: "2.1.2"
 
-      - name: Get current package version
-        id: bobr
-        run: echo "CUR_VER=$(poetry version -s)" >> $GITHUB_OUTPUT
-
-      - name: Check if on rc version
-        id: chkrc
-        env:
-          CUR_VER: ${{ steps.bobr.outputs.CUR_VER }}
-        run: |
-          if [[ $CUR_VER =~ "rc" ]]; then
-            echo "STABLE=$(poetry version -s --dry-run prerelease --next-phase)" >> $GITHUB_OUTPUT
-          else
-            echo "::error:: $CUR_VER is not a rc version"
-          fi
-
       - name: Replace placeholders
+        id: bobr
         env:
-          STABLE: ${{ steps.chkrc.outputs.STABLE }}
           PLCHLDR: "PLACEHOLDER_NEXT_RELEASE_VERSION"
           PKGPATH: ${{ inputs.pkg-path }}
           PATTERN: ${{ inputs.file-pattern }}
-        shell: bash
+        shell: python
         run: |
-          echo "On rc version of $STABLE" >> $GITHUB_STEP_SUMMARY
-          echo "Replacing $PLCHLDR in $PATTERN files inside $PKGPATH" >> $GITHUB_STEP_SUMMARY
-          bash ./.github/replaceholders.sh
+          import os, sys, subprocess
+          from packaging.version import Version
+
+          # Get version from poetry
+          version = Version(subprocess.run(
+              "poetry version -s",
+              shell=True,
+              check=True,
+              text=True,
+              capture_output=True,
+          ).stdout)
+
+          # Check if we're on an rc version, fail if not
+          if not version.is_prerelease or version.pre[0] != "rc":
+              sys.exit(f"::error:: {version!s} is not a rc version")
+
+          # Write stable version to step summary
+          with open(os.environ.get("GITHUB_STEP_SUMMARY"), "a") as step_summary:
+              step_summary.write(f"On rc version of {version.base_version!s}\n")
+
+          # Write to output so version numbers are available upstream if needed
+          with open(os.environ.get("GITHUB_OUTPUT"), "a") as output:
+              output.write(f"CUR_VER={version!s}\n")
+              output.write(f"STABLE={version.base_version!s}\n")
+
+          # Get replacement parameters from ENV
+          placeholder = os.environ.get("PLCHLDR")
+          package_path = os.environ.get("PKGPATH")
+          pattern = os.environ.get("PATTERN")
+
+          # Write replacement parameters to step summary
+          with open(os.environ.get("GITHUB_STEP_SUMMARY"), "a") as step_summary:
+              step_summary.write(
+                  f"Replacing {placeholder} in {pattern} files inside "
+                  f"{package_path}\n"
+              )
+
+          # Run actual replace command
+          subprocess.run(
+              (f'find {package_path} -type f -name "{pattern}" -exec sed -i '
+               f'"s/{placeholder}/{version.base_version!s}/g" {{}} +'),
+              shell=True,
+              check=True,
+              text=True,
+          )
 
       - name: Check for changes
         id: chkdiff
@@ -96,12 +123,16 @@ jobs:
           echo "CHANGES=$?" >> $GITHUB_OUTPUT
 
       - name: Commit changes
-        if: ${{ steps.chkdiff.outputs.CHANGES }}
+        if: ${{ steps.chkdiff.outputs.CHANGES != 0 }}
         env:
-          STABLE: ${{ steps.chkrc.outputs.STABLE }}
+          STABLE: ${{ steps.bobr.outputs.STABLE }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git commit -am "Replaced next version placeholders with v$STABLE"
+          git commit -am "Replaced next version placeholders with $STABLE"
           git push
           echo "Successfully committed and pushed placeholder replacement." >> $GITHUB_STEP_SUMMARY
+
+      - name: No replacements
+        if: ${{ steps.chkdiff.outputs.CHANGES == 0 }}
+        run: echo "Nothing was replaced." >> $GITHUB_STEP_SUMMARY
