--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -6,5 +6,5 @@ on:
 
 jobs:
   Release:
-    uses: AstarVienna/DevOps/.github/workflows/publish_pypi.yml@fh/publish
+    uses: AstarVienna/DevOps/.github/workflows/publish_pypi.yml@main
     secrets: inherit
