--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ dependencies = [
 ]
 
 [project.urls]
-repository = "https://github.com/AstarVienna/astar-utils"
+Repository = "https://github.com/AstarVienna/astar-utils"
+Changelog = "https://github.com/AstarVienna/astar-utils/releases"
+
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
