Fix package classifiers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,7 @@ maintainers = [
     {name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl"},
 ]
 readme = "README.md"
-classifiers = [
-    "Intended Audience :: Science/Research",
-    "Operating System :: OS Independent",
-    "Topic :: Scientific/Engineering :: Astronomy",
-    "Topic :: Utilities"
-]
+dynamic = [ "classifiers" ]
 requires-python = ">=3.10,<3.13"
 dependencies = [
     "more-itertools (>=10.2.0,<11.0.0)",
@@ -28,6 +23,14 @@ dependencies = [
 Repository = "https://github.com/AstarVienna/astar-utils"
 Changelog = "https://github.com/AstarVienna/astar-utils/releases"
 
+
+[tool.poetry]
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Utilities"
+]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
